--- a/_publications/ICC2024.md
+++ b/_publications/ICC2024.md
@@ -1,9 +1,9 @@
 ---
 title: "Enhancing Vehicular Edge Intelligence through Distributed Collaborative Generative AI Inference"
-collection: 2024 IEEE International Conference on Communications (ICC)
-excerpt: 'Gaochang Xie, Renchao Xie, Xinyuan Zhang, Jiangtian Nie, Qinqin Tang, **Qian Chen**, and Dusit Niyato'
-date: 2024-6-9
-venue: 'IEEE International Conference on Communications'
-paperurl: 'https://icc2024.ieee-icc.org/; Coming soon'
+collection: 44th IEEE International Conference on Distributed Computing Systems
+excerpt: 'Ningbin Yang, Chunming Tang, Zehui Xiong, **Qian Chen**, Jiawen Kang, and Debiao He'
+date: 2024-7-23
+venue: 'IEEE International Conference on Distributed Computing Systems'
+paperurl: 'https://icdcs2024.icdcs.org/accepted-papers/; Coming soon'
 ---
-**Abstract:** In recent years, there has been a proliferation of Edge Intelligence (EI) services, especially within Internet of Vehicles (IoV) scenarios, accompanied by a growing demand for multi-modal content generation. In response, Generative Artificial Intelligence (GAI) has emerged as a promising solution, equipping EI to produce diverse Artificial Intelligence-Generated Content (AIGC) for ubiquitous edge services. However, existing cloud-based GAI capabilities, which are mostly provided via the web and the Internet, introduce unacceptable latency overhead and heightened security risks for vehicular services. To address the above shortcomings and the lack of endogenous mechanisms for applying GAI to IoV scenarios, in this paper, we propose a layered vehicular GAI framework that seamlessly integrates GAI and EI. Within this framework, we devise a distributed collaborative inference mechanism between Road-Side Units (RSUs) and vehicles. Furthermore, we formulate the shared and local inference splitting problem, a pivotal challenge influencing both GAI service latency and content-generation capability. To tackle this issue, we introduce a backward induction-based algorithm, which enables the system can make splitting decisions using a simple threshold-based policy. Simulation results underscore the remarkable performance of the proposed system and vehicular collaborative inference mechanism, promising to facilitate diverse content generation within vehicular networks.
+**Abstract:** Committee-based blockchain consensus is a fusion of permissionless consensus and the permissioned Byzantine Fault-Tolerant (BFT) classical protocol. However, three enduring challenges remain: the formal security framework for the Proofof-Stake (PoS)-based hybrid consensus, the dynamic adjustment of committee size and the definition of a precise consensus time bound. To tackle these challenges, in this paper, we present a Stackelberg game-driven fair committee-based blockchain consensus protocol, dubbed SG-FCB, which combines PoS and reputation-based blockchain hybrid BFT consensus. To achieve fair leader election and committee reconfiguration seamlessly, the SG-FCB protocol leverages a unbiased BLS-threshold signature and a random shuffle algorithm. Specifically, the variant-BFT is designed to maintain the low communication cost of O(n), and a Stackelberg game-based incentive mechanism is proposed to maximize the individual profit of the validators and the expected consensus committee responsiveness efficiency of blockchain user. Rigorous security analysis shows that for an adversary with a stakeholding fraction less than 1/3 and sufficient reputation value, we define the time bound for consensus and the SGFCB protocol achieves consistency and liveness properties by reasonably setting a corruption parameter and liveness parameter within a formal framework.
